--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -72,9 +72,11 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="lbcomment">Comment</span>
               </div>
-              <input [(ngModel)]="txComment" name="txComment" id="txComment" type="search" class="form-control form-control-sm" placeholder="" aria-label=""  aria-describedby="lbcomment">
+              <input [(ngModel)]="txComment" name="txComment" id="txComment" type="text" class="form-control form-control-sm" placeholder="" aria-label=""  aria-describedby="lbcomment">
                
-               <!-- button *ngIf="txComment" (click)="clearComment()" class="btn btn-outline-secondary" type="button" id="button-addon2">X</button -->
+               <button *ngIf="txComment" (click)="clearComment()" class="btn btn-outline-secondary" type="button" id="button-addon2">
+               <i class="bi bi-x-circle" aria-hidden="true"></i>
+               </button>
             </div>
 
             <div class="input-group input-group-sm mb-3">
