Added app title determined by api config. Who would have thought something so trivial would required so many changes!!

--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -15,7 +15,7 @@
     </ul>
 
     <div class="ms-auto order-last">
-        <a class="navbar-brand" href="#">CPAccount{{envName}}</a>
+        <a class="navbar-brand" href="#">{{title}}</a>
     </div>
 </nav>
 
