--- a/swipe-angular-list-with-demo/src/app/app.component.html
+++ b/swipe-angular-list-with-demo/src/app/app.component.html
@@ -24,12 +24,12 @@
 
 
 <ng-template #customTemplateSrc let-item='item' let-id='id'>
-	<div style="display: flex;">
+   <div style="display: flex;">
 		<div>
-			<span>{{item.title}}</span>
+			{{item.title}}
 		</div>
 		<div>
 			{{item.subTitle}}
 		</div>
-		</div>
+   </div>
 </ng-template>
