--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -15,7 +15,7 @@
     </ul>
 
     <div class="ms-auto order-last">
-        <a class="navbar-brand" href="#">{{title}}<small> {{versiontxt}}</small></a>
+        <a class="navbar-brand" href="#">{{title}}<small> {{versiontxt}} ng18</small></a>
     </div>
 </nav>
 
