--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -19,6 +19,8 @@
     </div>
 </nav>
 
+<update-modal #myModal></update-modal>
+<button class="btn btn-lg btn-outline-primary" (click)="doUpdate()">Launch modal</button>
 
 <div class="page">
   <div class="transactions" *ngIf="isTransactions()">
@@ -53,8 +55,8 @@
                      name="txDate" id="txDate" type="text" 
                      class="form-control-date form-control form-control-sm" placeholder="DD/MM/YYYY">
               <div class="input-group-append">
-                <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button">
-                  <img src="assets/images/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
+                <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button" title="date">
+                  <img src="assets/images/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;" title="date"/>
                 </button>
               </div> 
 
@@ -63,7 +65,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="lbType">Type</span>
                 </div>
-                <select class="form-control form-control-sm" [(ngModel)]="txType" name="txType" id="txType">
+                <select class="form-control form-control-sm" [(ngModel)]="txType" name="txType" id="txType" title="type">
                     <option *ngFor="let txnType of txnTypes" [ngValue]="txnType">{{txnType}}</option>
                 </select>
             </div>
@@ -72,9 +74,9 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="lbcomment">Comment</span>
               </div>
-              <input [(ngModel)]="txComment" name="txComment" id="txComment" type="text" class="form-control form-control-sm" placeholder="" aria-label=""  aria-describedby="lbcomment">
+              <input title="comment" [(ngModel)]="txComment" name="txComment" id="txComment" type="text" class="form-control form-control-sm" placeholder="" aria-label=""  aria-describedby="lbcomment">
                
-               <button *ngIf="txComment" (click)="clearComment()" class="btn btn-outline-secondary" type="button" id="button-addon2">
+               <button *ngIf="txComment" (click)="clearComment()" class="btn btn-outline-secondary" type="button" id="button-addon2" title="clrcomment">
                <i class="bi bi-x-circle" aria-hidden="true"></i>
                </button>
             </div>
@@ -89,11 +91,71 @@
           </form>
           <button type="button" class="btn btn-default btn-primary" (click)="addtransaction();">Add new transaction</button>&nbsp;
           <button type="button" class="btn btn-default btn-primary" (click)="doScan();">Scan QR code</button>    
-        </div>        
-      
-      <!-- div>
-        <textarea [(ngModel)]="txPastearea" (paste)="onPaste($event)" placeholder="Paste QR EPC data here..."></textarea>    
-      </div -->
-    </div>
+        </div>              
+      <div>
+         <!-- this should go in the app page or be done by the app component, I think-->
+         <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
+         <pre>{{closeResult}}</pre>      </div -->
+      </div>
   </div>
 </div>
+
+<ng-template #content let-modal>
+   <div class="modal-header">
+   <h4 class="modal-title" id="modal-basic-title">Update transaction</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+   </div>
+
+   <div class="modal-body">
+      <form #newtxnform="ngForm">
+         <div class="input-group input-group-sm mb-3">
+            <div class="input-group-prepend">
+            <span class="input-group-text" id="lbdate">Date</span>
+         </div>
+         <!-- ng add @angular/localize was required to enable navigation backwards and forwards   -->
+         <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txDate" 
+                  name="txDate" id="txDate" type="text" 
+                  class="form-control-date form-control form-control-sm" placeholder="DD/MM/YYYY">
+         <div class="input-group-append">
+            <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button">
+               <img src="assets/images/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
+            </button>
+         </div> 
+
+         </div>
+          <div class="input-group input-group-sm mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="lbType">Type</span>
+              </div>
+              <select class="form-control form-control-sm" [(ngModel)]="txType" name="txType" id="txType">
+                  <option *ngFor="let txnType of txnTypes" [ngValue]="txnType">{{txnType}}</option>
+              </select>
+          </div>
+
+          <div class="input-group input-group-sm mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="lbcomment">Comment</span>
+            </div>
+            <input [(ngModel)]="txComment" name="txComment" id="txComment" type="text" class="form-control form-control-sm" placeholder="" aria-label=""  aria-describedby="lbcomment">
+             
+            <button *ngIf="txComment" (click)="clearComment()" class="btn btn-outline-secondary" type="button" id="button-addon2">
+               <i class="bi bi-x-circle" aria-hidden="true"></i>
+            </button>
+         </div>
+
+         <div class="input-group input-group-sm mb-3">
+            <div class="input-group-prepend">
+               <span class="input-group-text" id="lbamount">Amount Debited</span>
+            </div>
+            <input [(ngModel)]="txAmount" name="txAmount" id="txAmount" type="number" class="form-control form-control-sm" placeholder="-ve number for Credit" aria-label="-ve number for Credit"  aria-describedby="lbamount">
+         </div>          
+      </form>
+
+      <div class="modal-footer">
+         <button type="button" class="btn btn-default btn-primary" (click)="modal.close('Update click')">Update</button>
+      </div>        
+   </div>   
+</ng-template>
+  
