--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -179,8 +179,8 @@
 		      </form>
 		   </div>
          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" (click)="updmodal.dismiss('Cancel click')">Cancel</button>
-            <button type="button" class="btn btn-default btn-primary" (click)="updmodal.close('Update click')">Update</button>
+            <button type="button" class="btn btn-secondary" (click)="updmodal.dismiss('CANCEL')">Cancel</button>
+            <button type="button" class="btn btn-default btn-primary" (click)="updmodal.close('UPDATE')">Update</button>
          </div>        
       </div> <!-- modal-content -->
    </div> <!-- modal-dialog -->
