--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -21,13 +21,14 @@
   <table class="table table-striped table-sm">
     <thead class="thead-inverse">
     <tr><th colspan="3">Transactions for {{activeaccount.name}}</th></tr>
-    <tr><th>Date</th><th>Memo</th><th>Amount</th></tr>
+    <tr><th>Date</th><th>Memo</th><th>Amount</th><th *ngIf="desktopDisplay">Balance</th><th *ngIf="desktopDisplay"></th></tr>
     </thead>
     <tbody class="">
     <tr *ngFor="let txn of transactions" [ngClass]="{'table-success': txn.locked}">
        <td>{{txn.date}}</td>
        <td (swipeleft)="!txn.locked && open(content, txn)">{{txn.comment}}</td>
        <td>{{txn.amount}}</td>
+       <td *ngIf="desktopDisplay">{{txn.balance}}</td>
        <td *ngIf="desktopDisplay">
        <button *ngIf="!txn.locked" class="btn" (click)="open(content, txn)"><i class="bi bi-pencil-square" aria-hidden="true"></i></button>
        </td>
