--- a/account.ui/src/sass/account-styles.scss
+++ b/account.ui/src/sass/account-styles.scss
@@ -13,3 +13,12 @@
    @extend .input-group-sm;
    @extend .mb-2;
 }
+
+
+.acc-table-btn
+{
+   @extend .btn;
+   @extend .my-0;
+   @extend .py-0;
+   --bs-btn-line-height: 16px;
+}
